fixed: more layout issues with team settings

--- a/src/apps/teams/src/components/TeamCard/TeamCard.less
+++ b/src/apps/teams/src/components/TeamCard/TeamCard.less
@@ -5,37 +5,12 @@
   flex-direction: column;
 
   margin: 0 !important;
-
   max-height: 570px;
-  // max-width: 500px;
-
-  // flex: 1 0 0%;
-  // margin: 1rem;
-  // @supports (display: grid) {
-  //   display: grid;
-  //   grid-template-rows: 30px 3fr 50px;
-  //   margin: 0;
-  // }
 
   &:hover,
   &:focus,
   &:active {
     box-shadow: 0 0 10px #8398bd;
-  }
-
-  .CardHeader {
-    // display: flex;
-    // align-items: center;
-
-    // .Copy {
-    //   font-size: 0.7em;
-    //   padding: 0.4rem 0.5rem;
-    //   margin-right: 0.5rem;
-    // }
-
-    // .ZUID {
-    //   font-weight: bold;
-    // }
   }
 
   .CardContent {
@@ -60,26 +35,19 @@
       }
 
       .Editing {
-        width: 93%;
-        background: @zesty-teal;
-        padding: 0.5rem;
-        color: #fff;
-        border-radius: 3px;
+        margin-top: 12px;
 
-        input,
-        textarea {
-          display: block;
-          width: 100%;
-          margin: 0 0 1rem 0;
-        }
         textarea {
           height: 75px;
+          min-width: auto;
         }
-        .Save {
-          flex: 2;
+
+        .actions {
+          display: flex;
+          justify-content: space-between;
         }
+
         .Delete {
-          flex: 0;
           i {
             margin: 0;
           }
@@ -107,12 +75,6 @@
         }
       }
     }
-  }
-
-  .CardInvite {
-    // display: grid;
-    // grid-template-columns: 1.2fr 3fr;
-    // grid-gap: 0.2rem;
   }
 
   .CardFooter {
